--- a/app/src/main/res/layout/activity_boring_result.xml
+++ b/app/src/main/res/layout/activity_boring_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background"
-    tools:context=".Main7Activity">
+    tools:context=".ActivityBoringResult">
 
     <ImageView
         android:id="@+id/imageView7"
@@ -27,7 +27,7 @@
         android:id="@+id/textView3"
         android:layout_width="315dp"
         android:layout_height="103dp"
-        android:text="Las fiestas no son lo tuyo y las evades cada vez que te invitan a una. Prefieres quedarte en tu casa."
+        android:text="@string/first_option1_TexView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_width="315dp"
         android:layout_height="139dp"
         android:layout_marginTop="20dp"
-        android:text="Es por eso que Vit te invita a que disfrutes y descubras nuevos lugares, con  un código de descuento para que puedas salir más seguido."
+        android:text="@string/first_option2_TexView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,10 +54,10 @@
         android:layout_height="49dp"
         android:layout_marginTop="70dp"
         android:background="@drawable/boton_redondo"
-        android:onClick="salir"
+        android:onClick="Exit"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="Salir"
+        android:text="@string/Exit_Button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="25dp"
-        android:text="Si bebes no manejes ¡Pide Vit!"
+        android:text="@string/warning_TexView"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Resultado:"
+        android:text="@string/result_TexView"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:layout_width="174dp"
         android:layout_height="22dp"
         android:layout_marginTop="32dp"
-        android:text="CÓDIGO:FIESTAVIT"
+        android:text="@string/Code"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
