--- a/app/src/main/res/layout/activity_party_result.xml
+++ b/app/src/main/res/layout/activity_party_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background"
-    tools:context=".Main8Activity">
+    tools:context=".ActivityPartyResult">
 
     <ImageView
         android:id="@+id/imageView8"
@@ -23,7 +23,7 @@
         android:layout_width="94dp"
         android:layout_height="23dp"
         android:layout_marginTop="16dp"
-        android:text="Resultado:"
+        android:text="@string/result_TexView"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:id="@+id/textView4"
         android:layout_width="340dp"
         android:layout_height="100dp"
-        android:text="Es por eso que Vit te premia con un código de descuento para que sigas disfrutando de las fiestas."
+        android:text="@string/second_option2_TextView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_width="341dp"
         android:layout_height="96dp"
         android:layout_marginTop="12dp"
-        android:text="La fiesta no comienza hasta que tu llegas, te la pasas hablando con todos y conociendo a gente nueva."
+        android:text="@string/second_option1_TextView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_width="170dp"
         android:layout_height="26dp"
         android:layout_marginTop="20dp"
-        android:text="CÓDIGO:FIESTAVIT"
+        android:text="@string/Code"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,10 +71,10 @@
         android:layout_height="53dp"
         android:layout_marginTop="70dp"
         android:background="@drawable/boton_redondo"
-        android:onClick="salir"
+        android:onClick="Exit"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="Salir"
+        android:text="@string/Exit_Button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:layout_marginLeft="97dp"
         android:layout_marginStart="97dp"
         android:layout_marginTop="15dp"
-        android:text="Si bebes no manejes ¡Pide Vit!"
+        android:text="@string/warning_TexView"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
