--- a/app/src/main/res/layout/activity_ask_two.xml
+++ b/app/src/main/res/layout/activity_ask_two.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/background"
     android:minHeight="250dp"
-    tools:context=".Main3Activity">
+    tools:context=".ActivityAskTwo">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -25,10 +25,10 @@
         android:layout_height="49dp"
         android:layout_marginTop="84dp"
         android:background="@drawable/boton_redondo"
-        android:onClick="Siguiente"
+        android:onClick="Next"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="Siguiente"
+        android:text="@string/next_Button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,29 +46,29 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/rb_opt1"
+            android:id="@+id/option_one_readio_button"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_weight="1"
             android:checked="false"
-            android:theme="@style/MyRaidoButtonTwo"
             android:paddingLeft="15dp"
-            android:text="No te importa no hablar con nadie y te mantienes con el amigo que llegaste."
+            android:text="@string/option1_ask_two_RadioButton"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:theme="@style/MyRaidoButtonTwo" />
 
         <RadioButton
-            android:id="@+id/rb_opt2"
+            android:id="@+id/option_two_readio_button"
             android:layout_width="match_parent"
             android:layout_height="79dp"
             android:layout_weight="1"
             android:checked="false"
-            android:theme="@style/MyRaidoButtonTwo"
             android:paddingLeft="15dp"
-            android:text="Hablas con todos y haces nuevos amigos como siempre."
+            android:text="@string/option2_ask_two_RadioButton"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:theme="@style/MyRaidoButtonTwo" />
 
     </RadioGroup>
 
@@ -79,7 +79,7 @@
         android:layout_marginLeft="104dp"
         android:layout_marginStart="104dp"
         android:layout_marginTop="24dp"
-        android:text="Si bebes no manejes ¡Pide Vit!"
+        android:text="@string/warning_TexView"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="68dp"
-        android:text="Si vas a una fiesta donde no conoces a nadie tú..."
+        android:text="@string/second_question_TexView"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
