--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background"
-    tools:context=".MainActivity">
+    tools:context=".ActivityUser">
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,7 +23,7 @@
         android:layout_width="88dp"
         android:layout_height="22dp"
         android:layout_marginTop="8dp"
-        android:text="Presenta:"
+        android:text="@string/presents_TexView"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,19 +40,19 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="68dp"
         android:background="@drawable/boton_redondo"
-        android:onClick="comenzar"
+        android:onClick="Start"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="Comenzar"
+        android:text="@string/start_Button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_correo" />
+        app:layout_constraintTop_toBottomOf="@+id/mailEditText" />
 
     <EditText
-        android:id="@+id/txt_nombre"
+        android:id="@+id/nameEditText"
         android:layout_width="336dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
@@ -66,7 +66,7 @@
         android:drawablePadding="20dp"
         android:ems="10"
         android:gravity="center_vertical"
-        android:hint="Nombre"
+        android:hint="@string/name_EditText"
         android:inputType="textPersonName"
         android:paddingLeft="25dp"
         android:scrollbars="none|vertical"
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
-        android:id="@+id/txt_correo"
+        android:id="@+id/mailEditText"
         android:layout_width="336dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
@@ -96,7 +96,7 @@
         android:drawablePadding="20dp"
         android:ems="10"
         android:gravity="center_vertical"
-        android:hint="Correo electronico"
+        android:hint="@string/email_EditText"
         android:inputType="textPersonName"
         android:paddingLeft="25dp"
         android:scrollbars="none|vertical"
@@ -109,14 +109,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />
+        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="356dp"
         android:layout_height="33dp"
         android:layout_marginTop="4dp"
-        android:text="¿Sabes qué clase de fiestero eres?"
+        android:text="@string/question_TexView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
         android:id="@+id/textView6"
         android:layout_width="252dp"
         android:layout_height="33dp"
-        android:text="Atravete a descubrirlo"
+        android:text="@string/motivation_TexView"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -142,7 +142,7 @@
         android:layout_marginLeft="98dp"
         android:layout_marginStart="95dp"
         android:layout_marginTop="8dp"
-        android:text="Si bebes no manejes ¡Pide Vit!"
+        android:text="@string/warning_TexView"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
