--- a/app/src/main/res/layout/activity_ask_fourth.xml
+++ b/app/src/main/res/layout/activity_ask_fourth.xml
@@ -27,7 +27,7 @@
         android:onClick="Next"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/next_Button"
+        android:text="@string/next_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option1_ask_fourth_RadioButton"
+            android:text="@string/option1_ask_fourth_radio_button"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -64,7 +64,7 @@
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option2_ask_fourth_RadioButton"
+            android:text="@string/option2_ask_fourth_radio_button"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:theme="@style/MyRaidoButtonTwo" />
@@ -78,7 +78,7 @@
         android:layout_marginLeft="98dp"
         android:layout_marginStart="95dp"
         android:layout_marginTop="25dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="76dp"
-        android:text="@string/fourth_question_TexView"
+        android:text="@string/fourth_question_text_view"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
