--- a/app/src/main/res/layout/activity_ask_one.xml
+++ b/app/src/main/res/layout/activity_ask_one.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option1_ask_one_RadioButton"
+            android:text="@string/option1_ask_one_radio_button"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option2_ask_one_RadioButton"
+            android:text="@string/option2_ask_one_radio_button"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:theme="@style/MyRaidoButtonTwo" />
@@ -57,9 +57,9 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="202dp"
-        android:layout_height="67dp"
+        android:layout_height="76dp"
         android:layout_marginTop="108dp"
-        android:text="@string/first_question_TexView"
+        android:text="@string/first_question_text_view"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
@@ -74,7 +74,7 @@
         android:onClick="Next"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/next_Button"
+        android:text="@string/next_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
         android:layout_marginLeft="104dp"
         android:layout_marginStart="104dp"
         android:layout_marginTop="24dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
