--- a/app/src/main/res/layout/activity_boring_result.xml
+++ b/app/src/main/res/layout/activity_boring_result.xml
@@ -27,7 +27,7 @@
         android:id="@+id/textView3"
         android:layout_width="315dp"
         android:layout_height="103dp"
-        android:text="@string/first_option1_TexView"
+        android:text="@string/first_option1_text_view"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_width="315dp"
         android:layout_height="139dp"
         android:layout_marginTop="20dp"
-        android:text="@string/first_option2_TexView"
+        android:text="@string/first_option2_text_view"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:onClick="Exit"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/Exit_Button"
+        android:text="@string/exit_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="25dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/result_TexView"
+        android:text="@string/result_text_view"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:layout_width="174dp"
         android:layout_height="22dp"
         android:layout_marginTop="32dp"
-        android:text="@string/Code"
+        android:text="@string/code_text_view"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
