--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -23,7 +23,7 @@
         android:layout_width="88dp"
         android:layout_height="22dp"
         android:layout_marginTop="8dp"
-        android:text="@string/presents_TexView"
+        android:text="@string/presents_text_view"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:onClick="Start"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/start_Button"
+        android:text="@string/start_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:drawablePadding="20dp"
         android:ems="10"
         android:gravity="center_vertical"
-        android:hint="@string/name_EditText"
+        android:hint="@string/name_edit_text"
         android:inputType="textPersonName"
         android:paddingLeft="25dp"
         android:scrollbars="none|vertical"
@@ -96,7 +96,7 @@
         android:drawablePadding="20dp"
         android:ems="10"
         android:gravity="center_vertical"
-        android:hint="@string/email_EditText"
+        android:hint="@string/email_edit_text"
         android:inputType="textPersonName"
         android:paddingLeft="25dp"
         android:scrollbars="none|vertical"
@@ -116,7 +116,7 @@
         android:layout_width="356dp"
         android:layout_height="33dp"
         android:layout_marginTop="4dp"
-        android:text="@string/question_TexView"
+        android:text="@string/question_text_view"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
         android:id="@+id/textView6"
         android:layout_width="252dp"
         android:layout_height="33dp"
-        android:text="@string/motivation_TexView"
+        android:text="@string/motivation_text_view"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -142,7 +142,7 @@
         android:layout_marginLeft="98dp"
         android:layout_marginStart="95dp"
         android:layout_marginTop="8dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
