--- a/app/src/main/res/layout/activity_ask_five.xml
+++ b/app/src/main/res/layout/activity_ask_five.xml
@@ -27,7 +27,7 @@
         android:onClick="Result"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/result_Button"
+        android:text="@string/result_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,26 +45,26 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
-            android:id="@+id/rb_option1"
+            android:id="@+id/option_one_readio_button"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option1_ask_five_RadioButton"
+            android:text="@string/option1_ask_five_radio_button"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:theme="@style/MyRaidoButtonTwo" />
 
         <RadioButton
-            android:id="@+id/rb_option2"
+            android:id="@+id/option_two_readio_button"
             android:layout_width="match_parent"
             android:layout_height="79dp"
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option2_ask_five_RadioButton"
+            android:text="@string/option2_ask_five_radio_button"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:theme="@style/MyRaidoButtonTwo" />
@@ -78,7 +78,7 @@
         android:layout_marginLeft="98dp"
         android:layout_marginStart="95dp"
         android:layout_marginTop="25dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
         android:layout_marginRight="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="72dp"
-        android:text="@string/five_question_TexView"
+        android:text="@string/five_question_text_view"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
