--- a/app/src/main/res/layout/activity_ask_two.xml
+++ b/app/src/main/res/layout/activity_ask_two.xml
@@ -28,7 +28,7 @@
         android:onClick="Next"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/next_Button"
+        android:text="@string/next_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option1_ask_two_RadioButton"
+            android:text="@string/option1_ask_two_radio_button"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -65,7 +65,7 @@
             android:layout_weight="1"
             android:checked="false"
             android:paddingLeft="15dp"
-            android:text="@string/option2_ask_two_RadioButton"
+            android:text="@string/option2_ask_two_radio_button"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:theme="@style/MyRaidoButtonTwo" />
@@ -79,7 +79,7 @@
         android:layout_marginLeft="104dp"
         android:layout_marginStart="104dp"
         android:layout_marginTop="24dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="68dp"
-        android:text="@string/second_question_TexView"
+        android:text="@string/second_question_text_view"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
