--- a/app/src/main/res/layout/activity_party_result.xml
+++ b/app/src/main/res/layout/activity_party_result.xml
@@ -23,7 +23,7 @@
         android:layout_width="94dp"
         android:layout_height="23dp"
         android:layout_marginTop="16dp"
-        android:text="@string/result_TexView"
+        android:text="@string/result_text_view"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:id="@+id/textView4"
         android:layout_width="340dp"
         android:layout_height="100dp"
-        android:text="@string/second_option2_TextView"
+        android:text="@string/second_option2_text_view"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_width="341dp"
         android:layout_height="96dp"
         android:layout_marginTop="12dp"
-        android:text="@string/second_option1_TextView"
+        android:text="@string/second_option1_text_view"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_width="170dp"
         android:layout_height="26dp"
         android:layout_marginTop="20dp"
-        android:text="@string/Code"
+        android:text="@string/code_text_view"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
         android:onClick="Exit"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="@string/Exit_Button"
+        android:text="@string/exit_button"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:layout_marginLeft="97dp"
         android:layout_marginStart="97dp"
         android:layout_marginTop="15dp"
-        android:text="@string/warning_TexView"
+        android:text="@string/warning_text_view"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
